[package]
name = "revive-stdlib"
version = "0.2.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "revive compiler stdlib components"

[dependencies]
inkwell = { workspace = true, features = ["target-riscv", "no-libffi-linking", "llvm21-1"] }

[build-dependencies]
revive-build-utils = { workspace = true }
