[package]
name = "revive-yul"
description = "The revive YUL parser library."
version = "0.5.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
inkwell = { workspace = true }
num = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

revive-common = { workspace = true }
revive-llvm-context = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
criterion = { workspace = true }
revive-integration = { workspace = true }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "lower"
harness = false
